--- a/copy.html
+++ b/copy.html
@@ -1,21 +1,216 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Copy to Clipboard</title>
-  <meta charset="UTF-8">
-  <script>
-    window.onload = () => {
-      const params = new URLSearchParams(window.location.search);
-      const textToCopy = params.get("text") || "harixtg-1@okhdfcbank";
-      navigator.clipboard.writeText(textToCopy).then(() => {
-        document.getElementById("message").innerText = "Copied to clipboard:\n" + textToCopy;
-      }).catch(err => {
-        document.getElementById("message").innerText = "Copy failed: " + err;
-      });
-    };
-  </script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>OMG x CLOUD</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <style>
+    :root{
+      --bg:#0b0b10;
+      --card:#11121a;
+      --card-2:#0f1017;
+      --text:#e9ecf1;
+      --muted:#a6adbb;
+      --accent:#6b8afe;
+      --ring: 0 0 0 2px rgba(107,138,254,.25);
+      --radius:18px;
+      --shadow: 0 10px 30px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.03);
+      --grad-1: linear-gradient(90deg,#5b7cfe, #e44fec);
+      --grad-2: linear-gradient(90deg,#ff5757, #7a5bff);
+      --grad-3: linear-gradient(90deg,#19c37d, #7a5bff);
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{margin:0;background:var(--bg);color:var(--text);font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;}
+
+    /* Header */
+    .topbar{
+      position:sticky;top:0;z-index:10;
+      display:flex;align-items:center;justify-content:space-between;
+      padding:20px clamp(16px,3vw,32px);
+      background:linear-gradient(180deg, rgba(11,11,16,0.95), rgba(11,11,16,0.65) 70%, rgba(11,11,16,0));
+      backdrop-filter:saturate(140%) blur(6px);
+    }
+    .brand{font-size:40px;font-weight:800;letter-spacing:.5px}
+    .moon{
+      width:44px;height:44px;border-radius:50%;display:grid;place-items:center;cursor:pointer;
+      background:var(--card);box-shadow:var(--shadow);
+      transition:transform .2s ease, box-shadow .2s ease;
+    }
+    .moon:hover{transform:translateY(-1px)}
+    .moon svg{width:22px;height:22px;fill:var(--text);opacity:.9}
+
+    /* Layout */
+    .wrap{max-width:920px;margin:0 auto;padding:0 clamp(16px,3vw,32px) 64px}
+    .card{
+      background: radial-gradient(60% 140% at 0% 0%, rgba(107,138,254,.12) 0%, rgba(228,79,236,.08) 45%, rgba(0,0,0,0) 100%), var(--card);
+      border:1px solid rgba(255,255,255,.06);
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
+      padding:22px;
+    }
+    .title{font-size:28px;font-weight:800;margin:18px 0 14px}
+
+    /* File row */
+    .row{display:grid;grid-template-columns:24px 1fr;gap:12px;align-items:start;padding:14px 12px;border-radius:14px;background:var(--card-2);border:1px solid rgba(255,255,255,.04)}
+    .row + .row{margin-top:12px}
+    .row .label{font-size:12px;letter-spacing:.12em;text-transform:uppercase;color:var(--muted)}
+    .row .value{margin-top:6px;font-weight:600;line-height:1.5}
+    .row .sub{display:flex;gap:18px;align-items:center;margin-top:8px;color:var(--muted);font-size:13px}
+    .chip{display:inline-flex;gap:8px;align-items:center;padding:10px 12px;border-radius:12px;background:#0c0d14;border:1px solid rgba(255,255,255,.04)}
+
+    /* Buttons */
+    .actions{display:grid;gap:14px;margin-top:18px}
+    .btn{
+      position:relative;display:flex;align-items:center;justify-content:center;gap:12px;
+      padding:16px 18px;border-radius:16px;border:0;color:white;font-weight:700;font-size:16px;cursor:pointer;
+      box-shadow: 0 8px 20px rgba(0,0,0,.35);
+      transition: transform .12s ease, filter .2s ease, box-shadow .2s ease;
+    }
+    .btn:hover{transform:translateY(-1px)}
+    .btn:active{transform:translateY(0)}
+    .btn.watch{background:var(--grad-2)}
+    .btn.tg{background:var(--grad-1)}
+    .btn.fast{background:var(--grad-3)}
+    .btn svg{width:20px;height:20px;fill:white;opacity:.95}
+
+    /* Footer */
+    .foot{display:flex;gap:10px;align-items:center;color:var(--muted);font-weight:600;margin-top:18px}
+    .bolt{width:18px;height:18px}
+    .link{color:#ff7bd3;text-decoration:none}
+
+    /* Hero spacer */
+    .hero{height:80px}
+
+    @media (min-width:720px){
+      .actions{grid-template-columns:1fr;}
+    }
+    @media (min-width:860px){
+      .brand{font-size:44px}
+    }
+
+    /* Light mode */
+    body.light{--bg:#f4f6fb;--card:#ffffff;--card-2:#f7f8fc;--text:#0b1020;--muted:#47506a}
+    body.light .moon{background:#fff}
+  </style>
 </head>
-<body style="font-family:sans-serif; text-align:center; margin-top:100px;">
-  <h2 id="message">Copyid</h2>
+<body>
+  <header class="topbar wrap">
+    <div class="brand">OMG x CLOUD</div>
+    <button class="moon" id="themeToggle" aria-label="Toggle theme">
+      <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12.74 2c.42 0 .62.49.36.8A7.5 7.5 0 0 0 20.5 14.5a7.5 7.5 0 0 1-12.3 5.86c-.33-.27-.14-.8.28-.83A9 9 0 0 0 12.74 2Z"/></svg>
+    </button>
+  </header>
+
+  <main class="wrap">
+    <div class="hero"></div>
+
+    <section class="card" aria-label="File details">
+      <h2 class="title">File Details</h2>
+
+      <!-- FILENAME -->
+      <div class="row">
+        <div aria-hidden="true">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none"><path d="M14 3H6a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9m-6-6 6 6M14 3v6h6" stroke="currentColor" stroke-width="1.6"/></svg>
+        </div>
+        <div>
+          <div class="label">Filename</div>
+          <div class="value" id="filename">@MadxMvz - Coolie (2025) Hindi HQ HDTS - 1080p - x264 - HQ Clean - 3GB.mkv</div>
+          <div class="sub">
+            <span class="chip" title="Added on">
+              <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M8 2v3M16 2v3M3 9h18M5 13h5M5 17h5M14 13h5" stroke="currentColor" stroke-width="1.6"/></svg>
+              <span id="date">8/15/2025</span>
+            </span>
+            <span class="chip" title="Views">
+              <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M1 12s4-7 11-7 11 7 11 7-4 7-11 7S1 12 1 12Z" stroke="currentColor" stroke-width="1.6"/><circle cx="12" cy="12" r="3" fill="currentColor"/></svg>
+              <span id="views">34 views</span>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- SIZE -->
+      <div class="row">
+        <div aria-hidden="true">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none"><path d="M21 16V8a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v8m18 0a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2m18 0V8M3 16V8" stroke="currentColor" stroke-width="1.6"/></svg>
+        </div>
+        <div>
+          <div class="label">File Size</div>
+          <div class="value" id="size"><a href="#" id="sizeLink" style="color:#7abdff;text-decoration:none">2.99GB</a></div>
+        </div>
+      </div>
+
+      <!-- QUALITY -->
+      <div class="row">
+        <div aria-hidden="true">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none"><path d="M4 7h16M4 12h16M4 17h10" stroke="currentColor" stroke-width="1.6"/></svg>
+        </div>
+        <div>
+          <div class="label">Quality</div>
+          <div class="value" id="quality">1080p</div>
+        </div>
+      </div>
+
+      <!-- BUTTONS -->
+      <div class="actions">
+        <button class="btn watch" id="watchBtn">
+          <svg viewBox="0 0 24 24"><path d="M8 5v14l11-7-11-7Z"/></svg>
+          Watch Online
+        </button>
+        <button class="btn tg" id="tgBtn">
+          <svg viewBox="0 0 24 24"><path d="M9.04 15.53 19.46 6.5a.75.75 0 0 0-.73-1.29L4.4 10.1a.75.75 0 0 0 .06 1.43l5.15 1.32 1.33 5.2a.75.75 0 0 0 1.36.22l2.13-3.49"/></svg>
+          Get Telegram File
+        </button>
+        <button class="btn fast" id="fastBtn">
+          <svg viewBox="0 0 24 24"><path d="M13 3 4 14h7l-1 7 10-11h-7l0-7Z"/></svg>
+          Fast Download
+        </button>
+      </div>
+
+      <!-- FOOTER -->
+      <div class="foot">
+        <svg class="bolt" viewBox="0 0 24 24" fill="none"><path d="M13 3 4 14h7l-1 7 10-11h-7l0-7Z" stroke="currentColor" stroke-width="1.6"/></svg>
+        <span>Powered by</span>
+        <a class="link" href="#" id="brandLink">MadxBotz</a>
+      </div>
+    </section>
+  </main>
+
+  <script>
+    // ===== Theme Toggle =====
+    (function(){
+      const key = 'omgxcloud-theme';
+      const prefersLight = window.matchMedia('(prefers-color-scheme: light)').matches;
+      const saved = localStorage.getItem(key);
+      if((saved === 'light') || (!saved && prefersLight)) document.body.classList.add('light');
+      document.getElementById('themeToggle').addEventListener('click',()=>{
+        document.body.classList.toggle('light');
+        localStorage.setItem(key, document.body.classList.contains('light') ? 'light' : 'dark');
+      });
+    })();
+
+    // ===== Demo actions (replace with real links) =====
+    const notify = (msg)=>{
+      const n = document.createElement('div');
+      n.textContent = msg;
+      n.style.position='fixed';n.style.bottom='18px';n.style.left='50%';n.style.transform='translateX(-50%)';
+      n.style.padding='12px 16px';n.style.borderRadius='12px';n.style.background='#111827';n.style.color='#fff';
+      n.style.border='1px solid rgba(255,255,255,.12)';n.style.boxShadow='0 10px 30px rgba(0,0,0,.3)';
+      document.body.appendChild(n); setTimeout(()=>n.remove(),1500);
+    }
+    document.getElementById('watchBtn').onclick = ()=> notify('Open streaming player…');
+    document.getElementById('tgBtn').onclick = ()=> notify('Opening Telegram link…');
+    document.getElementById('fastBtn').onclick = ()=> notify('Starting direct download…');
+    document.getElementById('brandLink').onclick = (e)=>{e.preventDefault(); notify('MadxBotz site');}
+
+    // Optional: click size to copy
+    document.getElementById('sizeLink').addEventListener('click', (e)=>{
+      e.preventDefault();
+      navigator.clipboard.writeText(document.getElementById('filename').innerText).then(()=>notify('Filename copied'))
+    });
+  </script>
 </body>
 </html>
