--- a/copy.html
+++ b/copy.html
@@ -28,7 +28,7 @@
         }
 
         [data-theme="light"] {
-            --bg-primary: #f8f9fa;
+            --bg-primary: #ffffff;
             --bg-secondary: #ffffff;
             --bg-card: #ffffff;
             --text-primary: #212529;
