--- a/copy.html
+++ b/copy.html
@@ -16,7 +16,7 @@
         :root {
             --bg-primary: #000000;
             --bg-secondary: #1a1a1a;
-            --bg-card: #2d2d2d;
+            --bg-card: #1a1a1a;
             --text-primary: #ffffff;
             --text-secondary: #b0b0b0;
             --border-color: #404040;
